# tax-treaty-agent

./: .gitignore  AGENTS.md  Claude_Full_Export_1773208385365.md  Gemini_Full_Chat_1773208113277.md  LICENSE  README.md
.codex/: execution-control.json  project-memory.md  project-status.md
backend/: pyproject.toml
backend/app/: cases.py  constants.py  contracts.py  guided_facts.py  llm_document_extractor.py  llm_input_parser.py  llm_smoke.py  main.py  providers.py  service.py  source_ingest.py  stage1_eval.py  stage2_eval.py  stage4_eval.py  stage5_eval.py  stage6_eval.py  treaty_onboarding.py
backend/tax_treaty_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_analyze.py  test_build_treaty_dataset_script.py  test_case_persistence_api.py  test_dividend_review.py  test_handoff_contract.py  test_import_pipeline.py  test_internal_onboarding_api.py  test_internal_research_api.py  test_llm_document_extractor.py  test_llm_document_ingest.py  test_llm_input_parser.py  test_llm_smoke.py  test_public_analyze_api.py  test_public_site_artifacts.py  test_source_ingest.py  test_source_registry.py  test_stage1_eval.py  test_stage1_eval_fixture.py  test_stage2_eval.py  test_stage2_eval_fixture.py  test_stage2_runtime.py  test_stage4_eval.py  test_stage4_eval_fixture.py  test_stage5_eval.py  test_stage5_eval_fixture.py  test_stage6_eval.py  test_stage6_eval_fixture.py  test_treaty_onboarding.py
backend/tests/support/: handoff_assertions.py
data/: README.md
docs/: README.md  index.html  site.css  site.js
frontend/: index.html  package.json  (+4 more)
(+206 files in other folders)
